# spiral

./: .gitignore  README.MD  app.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: database.py  main.py  models.py  requirements.txt  schemas.py  seed.py
backend/api/: index.py
backend/routers/: auth.py  skills.py  users.py
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth.spec.ts  kanban.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/components/: avatar-dropdown.test.tsx  kanban-board.test.tsx  (+8 more)
frontend/src/components/: avatar-dropdown.tsx  badge.tsx  category-badge.tsx  dashboard.tsx  forgot-password.tsx  kanban-board.tsx  kanban-column.tsx  kanban-demo.tsx  kanban-view.tsx  login-form.tsx  navbar.tsx  protected-route.tsx  reset-password.tsx  signup-form.tsx  skill-card.tsx  skill-detail-modal.tsx  status-badge.tsx  track-card.tsx  track-selection.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api.ts  auth-redirect.ts  kanban-order.ts  status-styles.ts  supabase.ts  track-details.ts
frontend/src/pages/: AuthCallback.tsx  CheckEmail.tsx  Dashboard.tsx  ForgotPassword.tsx  LandingPage.tsx  Login.tsx  Register.tsx  ResetPassword.tsx  TrackSelection.tsx
frontend/src/test-utils/: MockAuthProvider.tsx  fixtures.ts  mock-supabase.ts  msw-handlers.ts  render.tsx  setup.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_auth.py  test_authorization.py
(+12 files in other folders)
